--- a/src/Services/Proposing/Proposing.API/appsettings.Development.json
+++ b/src/Services/Proposing/Proposing.API/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=(local)\\SQL2012;Database=Sales.Proposing;Trusted_Connection=True",
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
