--- a/src/ApiGateway/Sales.Bff/Sales.Bff.csproj
+++ b/src/ApiGateway/Sales.Bff/Sales.Bff.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Proposing\GeneratedSchemaTypes\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -13,6 +14,10 @@
     <PackageReference Include="GraphiQL" Version="1.2.0" />
     <PackageReference Include="GraphQL" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
 </Project>
