--- a/src/ApiGateway/Sales.Bff/Sales.Bff.csproj
+++ b/src/ApiGateway/Sales.Bff/Sales.Bff.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <GenerateCode>True</GenerateCode>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="Infrastructure\nswag.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Proposing\GeneratedSchemaTypes\" />
@@ -10,14 +15,26 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Infrastructure\nswag.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
     <PackageReference Include="GraphiQL" Version="1.2.0" />
     <PackageReference Include="GraphQL" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="NSwag.MSBuild" Version="12.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
+ 
+  <Target Name="NSwag" BeforeTargets="PrepareForBuild" Condition="'$(GenerateCode)'=='True' ">
+    <Exec Command="$(NSwagExe_Core21) run Infrastructure\nswag.json /variables:Configuration=$(Configuration)" />
+  </Target>
 
 </Project>
