Combine Proposing.API with Proposing.Domain Add ProposalCountries component

--- a/src/Services/Proposing/Proposing.API/Proposing.API.csproj
+++ b/src/Services/Proposing/Proposing.API/Proposing.API.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Application\DomainEventHandlers\" />
+    <Folder Include="Domain\Model\ProposalAggregate\Time\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -19,10 +20,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Proposing.Domain\Proposing.Domain.csproj" />
+    <PackageReference Include="morelinq" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
