--- a/src/sales-client/package.json
+++ b/src/sales-client/package.json
@@ -9,6 +9,7 @@
     "formik": "^1.3.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-apollo": "^2.3.1",
     "react-app-location": "^1.1.1",
