--- a/src/sales-client/package.json
+++ b/src/sales-client/package.json
@@ -15,7 +15,7 @@
     "react-app-location": "^1.1.1",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "warning": "^4.0.2",
     "yup": "^0.26.6"
   },
