--- a/src/sales-client/package.json
+++ b/src/sales-client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "reselect": "^4.0.0",
     "warning": "^4.0.2",
     "yup": "^0.26.10"
   },
